5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1679_1102.log
== TEST (2019-04-30 17:53:06) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0):
	print(("Entradas:"), var1,var2,var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print((vcil-vcalota)*1000)
	
	
-- ERROR:
File "XXXX", line 14
    if((var1>0) and (var2>0) and (var3>0):
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:53:13) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,var2,var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print((vcil-vcalota)*1000)
	
	
-- OUTPUT:
Entradas: 11.3 5.7 2.3
Volume: V litros
146966.8459275841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:53:40) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,var2,var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(vcil-vcalota)*1000, 3)
	
	
-- OUTPUT:
Entradas: 11.3 5.7 2.3
Volume: V litros
147000 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:54:58) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,var2,var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(vcil-vcalota)*1000, 3)
	
	
-- OUTPUT:
Entradas: 11.3 5.7 2.3
Volume: V litros
147000 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:55:03) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,var2,var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(vcil-vcalota)*1000, 3)
	
	
-- OUTPUT:
Entradas: 11.3 5.7 2.3
Volume: V litros
147000 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:55:09) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,var2,var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(vcil-vcalota)*1000, 3)
	
	
-- OUTPUT:
Entradas: 11.3 5.7 2.3
Volume: V litros
147000 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:55:20) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,var2,var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(vcil-vcalota)*1000, 3)
	
	
-- OUTPUT:
Entradas: 11.3 5.7 2.3
Volume: V litros
147000 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:55:51) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,,var2,,var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(vcil-vcalota)*1000, 3)
	
	
-- ERROR:
File "XXXX", line 15
    print(("Entradas:"), var1,,var2,,var3)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:56:57) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,","var2,","var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(vcil-vcalota)*1000, 3)
	
	
-- ERROR:
File "XXXX", line 15
    print(("Entradas:"), var1,","var2,","var3)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:57:05) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(vcil-vcalota)*1000, 3)
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: V litros
147000 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:57:21) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(vcil-vcalota)*1000), 3)
	
	
-- ERROR:
File "XXXX", line 21
    print(round(vcil-vcalota)*1000), 3)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:57:45) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print((round(vcil-vcalota)*1000),3)
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: V litros
147000 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:58:04) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print((vcil-vcalota)*1000)
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: V litros
146966.8459275841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:00:42) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print((vcil-var)*1000)
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: V litros
177658.11175805394
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:01:04) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(vcil-var)*1000, 3)
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: V litros
178000 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:01:41) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round((vcil-var)*1000), 3)
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: V litros
177658 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:03:53) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=((vcil-var)*1000)

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
	print("Volume: V litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(V, 3))
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: V litros
177658.112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:04:16) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=((vcil-var)*1000)

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
	print("Volume:" V,"litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(V, 3))
	
	
-- ERROR:
File "XXXX", line 19
    print("Volume:" V,"litros")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:04:23) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=((vcil-var)*1000)

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
	print("Volume:",V,"litros")
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(V, 3))
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.11175805394 litros
177658.112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:52:19) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(round((vcil-var)*1000), 3)

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(V)
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
(177658, 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:53:20) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(V, 3)
	
	
-- ERROR:
File "XXXX", line 26
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:53:26) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print(round(V, 3))
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
177658.112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:54:30) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:54:39) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
	
	
-- EXECUTION TIME:
0.309662
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas: 8.5 , 9.5 , 2.2
Volume: -189434.895 litros
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas: 8.0 , 4.0 , 6.0
Volume: 234572.251 litros
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:54:55) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:01:21) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1)
	print("Volume:",(round(V2, 3)),"litros")
	
	
-- ERROR:
File "XXXX", line 25
    elif(var2==1)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:01:31) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:45:35) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")

	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:24:59) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")

	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:25:07) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")

	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:25:24) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")

	
	
-- EXECUTION TIME:
0.276049
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas: 8.5 , 9.5 , 2.2
Volume: -189434.895 litros
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas: 8.0 , 4.0 , 6.0
Volume: 234572.251 litros
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:25:38) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")

	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:26:49) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000
v3=(vesf-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")

	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:26:56) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000
v3=(vesf-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")

	
	
-- EXECUTION TIME:
0.193736
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas: 8.5 , 9.5 , 2.2
Volume: -189434.895 litros
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas: 8.0 , 4.0 , 6.0
Volume: 234572.251 litros
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:27:53) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000
v3=(vesf-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:28:04) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000
v3=(vesf-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:28:23) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000
V3=(vesf-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:28:32) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000
V3=(vesf-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:28:37) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000
V3=(vesf-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- EXECUTION TIME:
0.222443
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas: 8.5 , 9.5 , 2.2
Volume: -189434.895 litros
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas: 8.0 , 4.0 , 6.0
Volume: 234572.251 litros
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:28:54) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)-var)*1000
V3=(vesf-var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:30:52) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=(((vcil)/2)*1000
V3=(var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- ERROR:
File "XXXX", line 17
    V3=(var)*1000
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:31:10) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=((vcil)/2)*1000
V3=(var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:31:19) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=((vcil)/2)*1000
V3=(var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- EXECUTION TIME:
0.146853
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas: 8.5 , 9.5 , 2.2
Volume: -189434.895 litros
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas: 8.0 , 4.0 , 6.0
Volume: 234572.251 litros
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:31:26) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=((vcil)/2)*1000
V3=(var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:31:40) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=((vcil)/2)*1000
V3=(var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:32:24) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=((vcil/2)-vcalota)*1000
V3=(var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:32:32) 
-- CODE:
#calcular o volume de combustivel
#primeiro colocar as variaveis
#verificar se entradas sao validas; var>0 e H>h e 2*r
#colocar a str na frente das variaveis
#h pode ser abaixo do meio;no meio; acima do meio
#se h acima do meio, V= Vcil-Vcalota
from math import *
var1=float(input("altura total do tanque:"))
var2=float(input("nivel de combustivel:"))
var3=float(input("raio do bojo:"))
vcil=(((pi)*((var3)**2))*var1)
vcalota=(((pi)/3)*((var2)**2)*((3*var3)-var2))
vesf=(4/3*((pi)*(var3**3)))
var=(vesf-vcalota)
V=(vcil-var)*1000
V2=((vcil/2)-vcalota)*1000
V3=(var)*1000

if((var1>0) and (var2>0) and (var3>0)):
	print(("Entradas:"), var1,",",var2,",",var3)
else:
	print(("Entradas:"),var1,var2,var3)
	print("Entradas invalidas")
if(var2>1):
	print("Volume:",(round(V, 3)),"litros")
elif(var2==1):
	print("Volume:",(round(V2, 3)),"litros")
elif(var2<1):
	print("Volume:",(round(V3, 3)),"litros")
	
	
-- EXECUTION TIME:
0.226797
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 177658.112 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas: 8.5 , 9.5 , 2.2
Volume: -189434.895 litros
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas: 8.0 , 4.0 , 6.0
Volume: 234572.251 litros
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
